Profile button updated & Create a Spot route functional.

--- a/frontend/src/components/Spots/AllSpots/Spots.css
+++ b/frontend/src/components/Spots/AllSpots/Spots.css
@@ -1,1 +1,36 @@
+.all-spots {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
+.spot-link {
+    text-decoration: none;
+    color: black;
+    width: 300px;
+    padding: 15px;
+    margin: 10px;
+    grid-template-areas:
+    "image", "image", "image"
+    "title", "title", "rating"
+    "price", "x", "x";
+}
+
+.spot-image {
+    height: 250px;
+    width: 250px;
+    border-radius: 15px;
+    grid-area: "image";
+}
+
+.spot-title {
+    grid-area: "title";
+}
+
+.spot-rating {
+    grid-area: "rating";
+}
+
+.spot-description {
+    grid-area: "price";
+}
