--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -1,8 +1,30 @@
+.spot-details-div {
+    margin: 0px 50px;
+    border: 1px solid salmon;
+    justify-content: center;
+}
+
+.spot-name {
+    margin: 10px 5px 0px;
+    /* border: 1px solid blue; */
+}
+
 .spot-details-header {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    align-items: center;
+    margin: 0px;
+    height: 50px;
     /* box-sizing: content-box; */
+    /* border: 1px solid salmon; */
+}
+
+.divider {
+    padding: 0px 5px;
+    font-weight: bold;
+}
+.review-header-info {
+    text-decoration: underline;
 }
 
 .spot-details-images {
@@ -12,7 +34,7 @@
     overflow: hidden;
     height: 50vh;
     width: 90vw;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 .small-images-div {
@@ -24,23 +46,21 @@
     "bl br";
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    padding: 10px;
 }
 
 .preview-image-div {
-    display: flex;
     height: 100%;
     width: 50%;
+    display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: 10px;
 }
 
 .preview-image {
-    object-fit: contain;
-    width: fit-content;
-    height: fit-content;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .top-left{
@@ -49,6 +69,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    /* padding: 5px; */
 }
 
 .top-right {
@@ -57,7 +78,8 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-top-right-radius: 15px;
+    border-top-right-radius: 20px;
+    /* padding: 5px; */
 }
 
 .bottom-left {
@@ -66,6 +88,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    /* padding: 5px; */
 }
 
 .bottom-right {
@@ -74,33 +97,147 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-bottom-right-radius: 15px;
+    border-bottom-right-radius: 20px;
+    /* padding: 5px; */
 }
 
 .top-left-image {
-    object-fit: contain;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
 }
 
 .top-right-image {
-    object-fit: contain;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
 }
 
 .bottom-left-image {
-    object-fit: contain;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
 }
 
 .bottom-right-image {
-    object-fit: contain;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
+}
+
+.details-container {
+    /* border: 2px solid green; */
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
+}
+
+.check-in {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.7);
+    height: fit-content;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    margin: 10px 5px;
+    padding: 15px;
+}
+
+.check-in-header {
+    font-weight: 20;
+    font-size: 18px;
+    margin: 10px 0px 0px;
+}
+
+.check-in-header-last {
+    font-weight: 20;
+    font-size: 18px;
+    margin: 10px 0px 10px;
+}
+
+.check-in-detail {
+    font-weight: lighter;
+    color: rgba(128, 128, 128, 0.9);
+    margin: 0;
+}
+
+.profile-info-div {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.7);
+    height: fit-content;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    margin: 10px 5px 10px;
+}
+
+.hosted-by {
+    /* border: 1px solid violet; */
+    margin: 25px 5px 10px;
+    /* border: 1px solid violet; */
+    height: fit-content;
+    width: fit-content;
+}
+
+.spot-info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: fit-content;
+    width: fit-content;
+    /* border: 1px solid blue; */
+}
+
+.room-info-div {
+    display: flex;
+    margin: 0px 5px 10px;
+    height: fit-content;
+    width: fit-content;
+    /* border: 1px solid violet; */
+}
+
+.room-info {
+    font-weight: lighter;
+}
+
+.profile-pic {
+    border: 1px solid black;
+    margin: 0px 0px 0px auto;
+    padding: 5px;
+    border-radius: 20px
+}
+
+.spot-details-description {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.9);
+    height: fit-content;
+    width: 50%;
+    display: flex;
+    align-items:flex-start;
+    justify-content: center;
+    margin: 10px 5px 10px;
+}
+
+.spot-details-description-text {
+    font-weight: lighter;
+    color: grey;
+}
+
+.spot-details-reviews {
+    height: fit-content;
+    width: 90vw;
+    display: flex;
+    align-items: flex-start;
+    margin: 0px 5px;
+}
+
+/* .reviews-h2 {
+    height: fit-content;
+    width: fit-content;
+    margin: 0px;
+} */
+
+.reviews-h2 {
+    display: flex;
+    align-items: center;
+    margin: 0px 0px 0px 0px;
+    /* border: 1px solid salmon; */
 }
