--- a/frontend/src/components/Spots/CurrentUserSpot/CurrentUserSpot.css
+++ b/frontend/src/components/Spots/CurrentUserSpot/CurrentUserSpot.css
@@ -1,5 +1,5 @@
 .user-spot-card {
-    width: 270px;
+    width: fit-content;
     padding: 10px;
     margin: 10px;
 }
@@ -7,34 +7,4 @@
 .user-spot-link {
     text-decoration: none;
     color: black;
-}
-
-.spot {
-    width: 270px;
-    padding: 10px;
-    margin: 10px;
-    grid-template-areas:
-    "image",
-    "rating",
-    "title",
-    "price",
-}
-
-.spot-image {
-    height: 250px;
-    width: 250px;
-    border-radius: 15px;
-    grid-area: "image";
-}
-
-.spot-rating {
-    grid-area: "rating";
-}
-
-.spot-title {
-    grid-area: "title";
-}
-
-.spot-description {
-    grid-area: "price";
 }
