--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -11,7 +11,7 @@
 }
 
 .button {
-    background-color: #ff385c;
+    background-color: #ee2d51;
     border-radius: 10px;
     color: #fff;
     height: 30px;
