--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -22,8 +22,26 @@
 
 .profile-dropdown {
     background-color: white;
-    padding: 10px;
+    padding: 25px 25px 25px 5px;
     border: 2px solid gray;
     list-style-type: none;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    right: 0px;
+}
+
+.profile-dropdown-2 {
+    background-color: white;
+    padding: 20px;
+    border: 2px solid gray;
+    list-style-type: none;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    right: 0px;
 }
