--- a/frontend/src/components/Spots/CurrentUserSpots/CurrentUserSpots.css
+++ b/frontend/src/components/Spots/CurrentUserSpots/CurrentUserSpots.css
@@ -1,3 +1,9 @@
+.user-spots-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .user-spots {
     display: flex;
     flex-wrap: wrap;
