--- a/frontend/src/components/Reviews/SpotReview/SpotReview.css
+++ b/frontend/src/components/Reviews/SpotReview/SpotReview.css
@@ -1,6 +1,8 @@
 .spot-review-card {
     display: flex;
     width: 50%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .review-user-name {
@@ -12,6 +14,14 @@
     color: grey;
 }
 
-.user-review {
-
+.review-button {
+    margin-right: 200px;
+    background-color: #ee2d51;
+    border-radius: 10px;
+    color: #fff;
+    height: 30px;
+    width: 100px;
+    /* margin: 10px; */
+    text-transform: uppercase;
+    border: none;
 }
