--- a/frontend/src/components/Spots/AllSpots/AllSpots.css
+++ b/frontend/src/components/Spots/AllSpots/AllSpots.css
@@ -23,24 +23,34 @@
 }
 
 .spot {
-    width: 220px;
+    width: 225px;
     padding: 10px;
+    display: grid;
+    grid-template-areas:
+    'image'
+    'title'
+    'description'
+    'price';
 }
 
 .spot-image {
-    height: 190px;
-    width: 190px;
+    height: 220px;
+    width: 220px;
     border-radius: 15px;
+    grid-area: image;
 }
 
-.spot-rating {
-
+.title-rating {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    grid-area: title;
 }
 
 .spot-title {
-
+    font-size: 15px;
 }
 
-.spot-description {
-
+.spot-rating {
+    font-size: 15px;
 }
