CSS styling added.

--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -45,3 +45,13 @@
     justify-content: center;
     right: 0px;
 }
+
+.create-spot-link {
+    text-decoration: none;
+    color: black;
+}
+
+.user-spots-link {
+    text-decoration: none;
+    color: black;
+}
