--- a/frontend/src/components/Spots/AllSpots/AllSpots.css
+++ b/frontend/src/components/Spots/AllSpots/AllSpots.css
@@ -1,7 +1,7 @@
 .spots-div {
     display: flex;
     width: 90vw;
-    border: 3px solid;
+    /* border: 3px solid; */
     align-items: center;
     /* justify-content: space-around; */
     margin: 50px;
