Minor CSS changes.

--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -246,6 +246,8 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    width: 100%;
+    /* height: fit-content; */
 }
 
 .create-review-div {
