--- a/frontend/src/components/Reviews/SpotReview/SpotReview.css
+++ b/frontend/src/components/Reviews/SpotReview/SpotReview.css
@@ -1,8 +1,16 @@
 .spot-review-card {
     display: flex;
     width: 50%;
+    max-height: 100px;
     justify-content: space-between;
     align-items: center;
+}
+
+.user-review-cont {
+    display: flex;
+    max-width: 35vw;
+    /* flex-wrap: wrap; */
+    overflow: scroll;
 }
 
 .review-user-name {
