--- a/frontend/src/components/Reviews/SpotReview/SpotReview.css
+++ b/frontend/src/components/Reviews/SpotReview/SpotReview.css
@@ -10,7 +10,7 @@
     display: flex;
     max-width: 35vw;
     /* flex-wrap: wrap; */
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .review-user-name {
