--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -1,7 +1,8 @@
 .spot-details-div {
     margin: 0px 50px;
-    /* border: 1px solid salmon; */
-    justify-content: center;
+    border: 1px solid salmon;
+    display: flex;
+    flex-direction: column;
 }
 
 .spot-name {
@@ -28,6 +29,71 @@
 }
 
 .spot-details-images {
+    height: 100%;
+    width: 90vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 5px 5px 5px 0px;
+    border: 1px solid black;
+}
+
+.preview-image {
+    height: 100%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding-right: 5px;
+    object-fit: cover;
+}
+
+.other-images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1%;
+    justify-items: center;
+    align-items: center;
+}
+
+.top-left-image {
+    width: 100%;
+    height: 100%;
+    padding-left: 2.5px;
+}
+
+.top-right-image {
+    width: 100%;
+    height: 100%;
+    padding-left: 2.5px;
+    border-top-right-radius: 10px;
+}
+
+.bottom-left-image {
+    width: 100%;
+    height: 100%;
+    padding-left: 2.5px;
+    border-radius: 0%;
+}
+
+.bottom-right-image {
+    width: 100%;
+    height: 100%;
+    padding-left: 2.5px;
+    border-bottom-right-radius: 10px;
+}
+
+/* .small-images-div {
+    height: 100%;
+    width: 50%;
+    display: grid;
+    grid-template-areas:
+    "tl tr"
+    "bl br";
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+} */
+
+
+
+/* .spot-details-images {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +135,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    /* padding: 5px; */
+    padding: 5px;
 }
 
 .top-right {
@@ -78,8 +144,8 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-top-right-radius: 20px;
-    /* padding: 5px; */
+    border-top-right-radius: 30px;
+    padding: 5px;
 }
 
 .bottom-left {
@@ -88,7 +154,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    /* padding: 5px; */
+    padding: 5px;
 }
 
 .bottom-right {
@@ -97,8 +163,8 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-bottom-right-radius: 20px;
-    /* padding: 5px; */
+    border-bottom-right-radius: 30px;
+    padding: 5px;
 }
 
 .top-left-image {
@@ -123,7 +189,7 @@
     flex-shrink: 0;
     width: 100%;
     height: 100%;
-}
+} */
 
 .details-container {
     /* border: 2px solid green; */
