--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -1,6 +1,6 @@
 .spot-details-div {
     margin: 0px 50px;
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
     display: flex;
     flex-direction: column;
 }
@@ -30,11 +30,11 @@
 
 .spot-details-images {
     height: 100%;
-    width: 90vw;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 5px 5px 5px 0px;
-    border: 1px solid black;
+    padding: 5px 0px 5px 0px;
+    /* border: 1px solid black; */
 }
 
 .preview-image {
@@ -57,6 +57,7 @@
     width: 100%;
     height: 100%;
     padding-left: 2.5px;
+    object-fit: cover;
 }
 
 .top-right-image {
@@ -64,6 +65,7 @@
     height: 100%;
     padding-left: 2.5px;
     border-top-right-radius: 10px;
+    object-fit: cover;
 }
 
 .bottom-left-image {
@@ -71,6 +73,7 @@
     height: 100%;
     padding-left: 2.5px;
     border-radius: 0%;
+    object-fit: cover;
 }
 
 .bottom-right-image {
@@ -78,6 +81,7 @@
     height: 100%;
     padding-left: 2.5px;
     border-bottom-right-radius: 10px;
+    object-fit: cover;
 }
 
 /* .small-images-div {
