--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -195,22 +195,31 @@
     height: 100%;
 } */
 
+.details-booking-cont {
+    display: flex;
+    height: fit-content;
+    width: 100%;
+    border: 1px solid red;
+}
+
 .details-container {
     /* border: 2px solid green; */
     display: flex;
     height: fit-content;
     flex-direction: column;
+    width: 60%;
 }
 
 .check-in {
     border-bottom: 1px solid rgba(128, 128, 128, 0.7);
     height: fit-content;
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
     margin: 10px 5px;
     padding: 15px;
+    box-sizing: border-box;
 }
 
 .check-in-header {
@@ -234,10 +243,12 @@
 .profile-info-div {
     border-bottom: 1px solid rgba(128, 128, 128, 0.7);
     height: fit-content;
-    width: 50%;
+    width: 100%;
     display: flex;
     align-items: center;
     margin: 10px 5px 10px;
+    /* padding-right: 15px; */
+    /* box-sizing: border-box; */
 }
 
 .hosted-by {
@@ -279,11 +290,12 @@
 .spot-details-description {
     border-bottom: 1px solid rgba(128, 128, 128, 0.7);
     height: fit-content;
-    width: 50%;
+    width: 100%;
     display: flex;
     align-items:flex-start;
     justify-content: center;
     margin: 10px 5px 10px;
+    /* padding-right: 5px; */
 }
 
 .spot-details-description-text {
@@ -291,11 +303,136 @@
     color: grey;
 }
 
+.bookings-container {
+    width: 450px;
+    height: 400px;
+    border: 1px solid rgba(128, 128, 128, 0.7);
+    border-radius: 20px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.booking-form-div {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.booking-header {
+    display: flex;
+    justify-content: space-between;
+    /* border-bottom: 1px solid rgba(128, 128, 128, 0.7); */
+}
+
+.price-cont-bookings {
+    display: flex;
+    justify-content: space-between;
+    width: fit-content;
+    height: 50px;
+    align-items: end;
+    /* border: 1px solid red; */
+}
+
+.night-text {
+    margin-bottom: 3%;
+    padding-left: 5px;
+}
+
+.nightly-price {
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+.bookings-reviews {
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+    padding-top: 10px;
+}
+
+.booking-input-div {
+    border: 1px solid rgba(128, 128, 128, 0.7);
+    display: flex;
+    width: 100%;
+    /* justify-content: space-between; */
+    border-radius: 10px;
+    box-sizing: border-box;
+    /* padding: 10px; */
+}
+
+.booking-form {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.booking-form-input-div {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.7);
+    box-sizing: border-box;
+}
+
+.checkin-checkout-div {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    /* padding: 2px; */
+    /* border-bottom: 1px solid rgba(128, 128, 128, 0.7); */
+    box-sizing: border-box;
+}
+
+.checkin-checkout-div.co {
+    border-left: 1px solid rgba(128, 128, 128, 0.7);
+    /* padding-left: 5px; */
+}
+
+.booking-input {
+    width: 95%;
+    border: none;
+    padding: none;
+    margin: none;
+}
+
+.guests-div {
+    width: 100%;
+    padding: 15px;
+}
+
+.booking-input-guests {
+    width: 100%;
+    border: none;
+}
+
+.booking-form-text {
+    font-weight: bolder;
+    font-size: 10px;
+}
+
+.errors {
+    color: red;
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.submit-button.reserve {
+    width: 100%;
+    height: 40px;
+}
+
 .spot-details-reviews {
     height: fit-content;
     width: 90vw;
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
     margin: 0px 5px;
 }
 
@@ -322,12 +459,13 @@
 
 .create-review-div {
     display: flex;
-    width: 100%;
+    width: fit-content;
     height: fit-content;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    align-items: center;
-    justify-content: center;
+    padding-top: 20px;
+    /* margin-top: 50px; */
+    /* margin-bottom: 20px; */
+    /* align-items: center; */
+    /* justify-content: center; */
 }
 
 .nav-link.create-review {
@@ -335,6 +473,6 @@
     color: white;
     background-color: #ff385c;
     padding: 5px 10px;
-    margin: 5px;
+    /* margin: 5px; */
     border-radius: 10px;
 }
