--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -44,3 +44,32 @@
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.1);;
 }
+
+.search-input-div {
+    border: 1px solid rgba(128, 128, 128, 0.7);
+    border-radius: 15px;
+    /* padding: 3px; */
+    height: 30px;
+}
+
+.search-input {
+    width: 400px;
+    height: 30px;
+    border: none;
+    padding-left: 10px;
+    /* border-radius: 15px; */
+    box-sizing: border-box;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.search-button.clickable {
+    border: none;
+    height: 30px;
+    margin: none;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-left: 1px solid rgba(128, 128, 128, 0.7);
+    color: white;
+    background-color: #ff385c;
+}
