--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -199,7 +199,7 @@
     display: flex;
     height: fit-content;
     width: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .details-container {
