--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -419,6 +419,8 @@
     color: red;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding-top: 10px;
 }
 
