--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -309,6 +309,7 @@
     border: 1px solid rgba(128, 128, 128, 0.7);
     border-radius: 20px;
     margin-left: 30px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
 }
